# symfexit

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  default.nix  flake.nix  lock.json  lock.x86_64-linux.json  manage.py  package-lock.json  pyproject.toml  requirements.txt  symfexit-9999.ebuild  theme.nix
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-container.yml  build-deploy.yml  checks.yml  django.yml  docs.yml  flake-updater.yml  relock-dependencies.yml  test.yml
docs/: conf.py  index.rst
docs/user/: admin.rst  index.rst  member.rst
manifests/: deployment.yaml  ns.yaml  percona-db.yaml
scripts/: docs-serve.sh
src/: manage.py
src/adminsite/: admin.py  apps.py  django_overrides.py
src/documents/: admin.py  apps.py  models.py  urls.py  views.py
src/documents/migrations/: 0001_initial.py  0002_alter_directory_options.py  0002_alter_directory_options_alter_file_options_and_more.py  0003_file_content_type_file_size_alter_filenode_parent.py
src/home/: admin.py  apps.py  menu.py  models.py  urls.py  views.py
src/home/migrations/: 0001_initial.py  0002_alter_homepage_options_alter_homepage_content_and_more.py
src/members/: admin.py  apps.py  backends.py  forms.py  models.py  urls.py  views.py
src/members/migrations/: 0001_initial.py  0002_alter_user_email_user_members_user_unique_email_key.py  0002_localgroup_contact_people_delete_contactperson.py  0003_alter_localgroup_options_alter_user_options_and_more.py
src/membership/: admin.py  apps.py  forms.py  models.py
src/membership/migrations/: 0001_initial.py  0002_alter_membership_options.py  0002_remove_membership_id_remove_membership_user_and_more.py  0003_alter_membership_options.py
src/menu/templates/: menu_lg.html  menupage.html
src/menu/templatetags/: menu.py
src/payments/: __init__.py  admin.py  apps.py  models.py  registry.py
src/payments/migrations/: 0001_initial.py  0002_alter_order_options_alter_subscription_options_and_more.py  0002_payable_payment_status.py  0002_remove_subscription_type.py  0003_payable_created_at.py  0003_subscription_period_quantity_and_more.py  0004_alter_billingaddress_options_order_payment_method_and_more.py  0004_payable_return_url_alter_payable_payment_status.py
src/payments/templatetags/: payments.py
src/payments_dummy/: apps.py  forms.py  payments.py  urls.py  views.py
src/payments_mollie/: apps.py  models.py  payments.py  urls.py  views.py
src/payments_mollie/migrations/: 0001_initial.py  0002_rename_payable_molliepayment_order.py
src/signup/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/signup/migrations/: 0001_initial.py  0002_alter_applicationpayment_options_and_more.py  0002_applicationpayment.py  0002_membershipapplication__subscription_and_more.py  0003_alter_membershipapplication__payable_and_more.py  0003_membershipapplication__payable.py  0004_membershipapplication_created_at.py  0005_membershipapplication_status_and_more.py  (+2 more)
src/symfexit/: apps.py  asgi.py  context_processors.py  helpers.py  settings.py  urls.py  utils.py  wsgi.py
src/theme/: .gitignore  admin.py  apps.py  context.py  models.py  tasks.py  urls.py  utils.py
src/worker/: __init__.py  admin.py  apps.py  logger.py  models.py  registry.py
symfexit/adminsite/: admin.py  adminsite.py  apps.py  django_overrides.py  models.py  tests.py
symfexit/documents/: admin.py  apps.py  decorators.py  models.py  tests.py  urls.py  views.py
symfexit/emails/: README.md  admin.py  apps.py  base_template.py  models.py  template_manager.py  tests.py
symfexit/events/: admin.py  apps.py  models.py  urls.py  views.py
symfexit/home/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
symfexit/members/: admin.py  apps.py  backends.py  forms.py  models.py  tests.py  urls.py  views.py
symfexit/membership/: admin.py  apps.py  forms.py  models.py
symfexit/menu/: apps.py
symfexit/payments/: README.md  __init__.py  admin.py  apps.py  models.py  registry.py  services.py  tasks.py  tests.py
symfexit/root/: __init__.py  apps.py  asgi.py  config.py  export_builder.py  export_formatters.py  export_mixin.py  export_views.py  helpers.py  management_urls.py  settings.py  test_export.py  tests.py  tests_cancel_mijnrood_subscriptions.py  tests_import_mijnrood.py  urls.py  utils.py  views.py  wsgi.py
symfexit/signup/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
symfexit/site_settings/: apps.py  views.py
symfexit/tenants/: admin.py  adminsite.py  apps.py  config.py  context.py  context_processors.py  middleware.py  models.py  test.py
symfexit/theme/: .gitignore  admin.py  apps.py  context.py  models.py  tasks.py  tests.py  urls.py  utils.py  views.py
symfexit/worker/: __init__.py  admin.py  apps.py  models.py  registry.py
(+323 files in other folders)
