[project]
name = "symfexit"
version = "0.1.0"
description = ""
authors = [
    {name = "Jelle Besseling", email = "jelle@pingiun.com"}
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
]
dependencies = [
    "dj-database-url ~= 2.1",
    "django~=5.2",
    "django-tailwind ~= 3.4",
    "django-tinymce ~= 4.0",
    "fontawesomefree ~= 6.2",
    "hashids ~= 1.3",
    "mollie-api-python ~= 3.6",
    "pillow ~= 11.0",
    "psycopg[binary,pool]~=3.2.10",
    "django-tenants~=3.9.0",
    "django-constance>=4.3.2",
    "bleach>=6.2.0",
    "pre-commit>=4.1.0",
    "django-drf-filepond>=0.5.0",
    "python-magic>=0.4.27",
    "commonmark>=0.9.1",
]
requires-python = ">= 3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.packages.find]
namespaces = true
include = ["symfexit"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "django-browser-reload>=1.17.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = 'node_modules'

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["**/migrations/**", "**/node_modules/**"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # django
    "DJ",
    # pylint
    "PL",
]
ignore = [
    "E501" # line too long
]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 18
max-returns = 10
