[project]
name = "symfexit"
dynamic = ["version"]
description = ""
authors = [
    {name = "Jelle Besseling", email = "jelle@pingiun.com"}
]
readme = "README.md"
license = "EUPL-1.2"
dependencies = [
    "dj-database-url~=3.0",
    "django~=6.0",
    "django-tailwind~=4.4",
    "django-tinymce~=5.0",
    "fontawesomefree ~= 6.2",
    "hashids ~= 1.3",
    "mollie-api-python ~= 3.6",
    "pillow~=12.1",
    "psycopg[binary,pool]~=3.3.2",
    "django-tenants~=3.10.0",
    "django-constance>=4.3.2",
    "bleach>=6.2.0",
    "django-drf-filepond>=0.5.0",
    "python-magic>=0.4.27",
    "commonmark>=0.9.1",
]
requires-python = ">= 3.13"

[tool.setuptools_scm]

[tool.setuptools]
packages = ["symfexit"]

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "beautifulsoup4>=4.13.5",
    "django-browser-reload>=1.17.0",
    "ruff>=0.8.0",
]

prod = [
    "uvicorn>=0.41.0",
    "dotenv>=0.9.9",
]

docs = [
    "sphinx>=8.0",
    "sphinx-autobuild>=2024.10",
]

[tool.black]
line-length = 100
target-version = ['py312']
exclude = 'node_modules'

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["**/migrations/**", "**/node_modules/**"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # django
    "DJ",
    # pylint
    "PL",
]
ignore = [
    "E501" # line too long
]

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 18
max-returns = 10
